force-app/main/default/objects/clofor_com_cfs__ACBalanceObligation__c/fields/clofor_com_cfs__CreditTransactionFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CreditTransactionFormula__c</fullName>
    <formula>clofor_com_cfs__ACBalanceID__r.clofor_com_cfs__TransactionBalanceLocalCredit__c</formula>
    <label>CREDIT TRANSACTION-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>