force-app/main/default/objects/clofor_com_cfs__ACBalanceObligation__c/fields/clofor_com_cfs__DebitTransactionFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DebitTransactionFormula__c</fullName>
    <formula>clofor_com_cfs__ACBalanceID__r.clofor_com_cfs__TransactionBalanceLocalDebit__c</formula>
    <label>DEBIT TRANSACTION-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>