force-app/main/default/objects/clofor_com_cfs__ACBalanceObligation__c/fields/clofor_com_cfs__DebitTransactionObligation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DebitTransactionObligation__c</fullName>
    <label>DEBIT TRANSACTION-OBLIGATION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>