force-app/main/default/objects/clofor_com_cfs__ACBalanceObligation__c/fields/clofor_com_cfs__TaxDeclarationID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TaxDeclarationID__c</fullName>
    <label>TAX DECLARATION ID</label>
    <referenceTo>clofor_com_cfs__TAXDeclaration__c</referenceTo>
    <relationshipName>ACBalTax</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>